--- a/prices.html
+++ b/prices.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🎃 AK Admin Prices - Halloween Edition 🎃</title>
+    <title>🎄 AK Admin Prices - Christmas Edition 🎅</title>
     <link rel="icon" href="https://cdn.discordapp.com/attachments/1174404879545012275/1290061529680445561/IMG_0062.png?ex=66fd112c&is=66fbbfac&hm=01016e1014c200a554c70d5c1ffb5d3f23af9b5afc35f54132fc9da27caae8b6" type="image/png">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Righteous&display=swap" rel="stylesheet"> <!-- Font imports -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Mountains+of+Christmas:wght@700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            background: linear-gradient(135deg, #ff8c00 0%, #ff8c00 50%, #000000 100%);
+            background: linear-gradient(135deg, #1a472a 0%, #2d5a27 50%, #0c1445 100%);
             background-size: 400% 400%;
             animation: gradientAnimation 15s ease infinite;
             color: white;
@@ -17,52 +17,98 @@
             padding: 20px;
             text-align: center;
             overflow-x: hidden;
+            position: relative;
         }
+
+        /* Add snowfall effect */
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: 
+                radial-gradient(white 1px, transparent 1px),
+                radial-gradient(white 1px, transparent 1px);
+            background-size: 50px 50px;
+            animation: snowfall 10s linear infinite;
+            pointer-events: none;
+            opacity: 0.5;
+        }
+
         h1 {
-            font-family: 'Righteous', cursive;
-            color: #ffcc00;
-            text-shadow: 2px 2px 5px black;
-            margin-bottom: 20px;
-            font-size: 2.5em;
+            font-family: 'Mountains of Christmas', cursive;
+            color: #ff0000;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5),
+                         0 0 10px rgba(255, 255, 255, 0.8);
+            margin-bottom: 30px;
+            font-size: 3.5em;
+            letter-spacing: 2px;
         }
+
         .price-list {
-            background-color: rgba(0, 0, 0, 0.8);
-            border-radius: 10px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
-            padding: 20px;
+            background-color: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(10px);
+            border-radius: 20px;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+            padding: 30px;
             margin: 20px auto;
             text-align: center;
             max-width: 90%;
-            width: 600px;
+            width: 700px;
+            border: 2px solid rgba(255, 255, 255, 0.2);
         }
+
         .price-item {
-            margin: 15px 0;
-            font-size: 1.5em;
-            transition: transform 0.2s;
+            margin: 25px 0;
+            font-size: 1.6em;
+            transition: all 0.3s ease;
+            padding: 20px;
+            border-radius: 15px;
+            background: rgba(255, 255, 255, 0.05);
         }
+
         .price-item:hover {
-            transform: scale(1.05);
+            transform: scale(1.03);
+            background: rgba(255, 255, 255, 0.1);
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
         }
+
         .icon {
-            width: 30px;
+            width: 40px;
             vertical-align: middle;
-            margin-right: 10px;
+            margin-right: 15px;
+            filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
         }
+
         .button-link {
-            background-color: #ff8c00;
+            background: linear-gradient(45deg, #ff0000, #ff4d4d);
             color: white;
-            padding: 10px 15px;
-            border-radius: 5px;
+            padding: 12px 25px;
+            border-radius: 25px;
             text-decoration: none;
-            transition: background-color 0.3s;
+            transition: all 0.3s ease;
             display: inline-block;
-            margin-top: 10px;
+            margin-top: 15px;
             font-size: 1em;
+            font-weight: bold;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            box-shadow: 0 4px 15px rgba(255, 0, 0, 0.3);
         }
+
         .button-link:hover {
-            background-color: #ffcc00;
+            background: linear-gradient(45deg, #ff4d4d, #ff0000);
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(255, 0, 0, 0.4);
         }
-        
+
+        @keyframes snowfall {
+            0% { background-position: 0 0; }
+            100% { background-position: 50px 50px; }
+        }
+
         @keyframes gradientAnimation {
             0% { background-position: 0% 50%; }
             50% { background-position: 100% 50%; }
@@ -92,25 +138,25 @@
 </head>
 <body>
 
-    <h1>🎃 PRICES - Halloween Sale 🎃</h1>
+    <h1>🎄 PRICES - Christmas Special 🎅</h1>
     <div class="price-list">
         <div class="price-item">
             <img src="https://cdn-icons-png.flaticon.com/512/174/174861.png" alt="PayPal Icon" class="icon"> 
-            • 8€ Paypal (Family And Friends Only) 
+            • 12€ Paypal (Family And Friends Only) 
             <br>
-            <a class="button-link" href="https://www.paypal.me/AliKhammas143" target="_blank">Click here to pay</a>
+            <a class="button-link" href="https://www.paypal.me/AliKhammas143" target="_blank">Pay with PayPal</a>
         </div>
         <div class="price-item">
             <img src="https://openseauserdata.com/files/4af336feebe8b7637ca549aaf4873b5b.png" alt="Robux Icon" class="icon"> 
-            • 400 ROBUX 
+            • 900 ROBUX 
             <br>
-            <a class="button-link" href="https://www.roblox.com/catalog/101120969629293" target="_blank">Click here to buy</a>
+            <a class="button-link" href="https://www.roblox.com/catalog/101120969629293" target="_blank">Purchase Robux</a>
         </div>
         <div class="price-item">
             <img src="https://assets.umod.org/images/icons/plugin/624057848f3f2.png" alt="Nitro Boost Icon" class="icon"> 
             • 3 Nitro Server Boosts
             <br>
-        <a class="button-link" href="https://discord.gg/bgWY2zEV7z" target="_blank">Click here to join server</a>
+            <a class="button-link" href="https://discord.gg/bgWY2zEV7z" target="_blank">Join Discord Server</a>
         </div>
     </div>
 
