--- a/prices.html
+++ b/prices.html
@@ -150,7 +150,7 @@
             <img src="https://openseauserdata.com/files/4af336feebe8b7637ca549aaf4873b5b.png" alt="Robux Icon" class="icon"> 
             • 900 ROBUX 
             <br>
-            <a class="button-link" href="https://www.roblox.com/catalog/101120969629293" target="_blank">Purchase Robux</a>
+            <a class="button-link" href="https://www.roblox.com/game-pass/970651850" target="_blank">Purchase Robux</a>
         </div>
         <div class="price-item">
             <img src="https://assets.umod.org/images/icons/plugin/624057848f3f2.png" alt="Nitro Boost Icon" class="icon"> 
