--- a/prices.html
+++ b/prices.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🎄 AK Admin Prices - Premium Christmas Edition 🎅</title>
+    <title>🎄 AK Admin Prices - Ultra Premium Edition 🎅</title>
     <link rel="icon" href="https://cdn.discordapp.com/attachments/1174404879545012275/1290061529680445561/IMG_0062.png?ex=66fd112c&is=66fbbfac&hm=01016e1014c200a554c70d5c1ffb5d3f23af9b5afc35f54132fc9da27caae8b6" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&family=Mountains+of+Christmas:wght@700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -23,7 +23,7 @@
             animation: gradientAnimation 15s ease infinite;
             min-height: 100vh;
             margin: 0;
-            padding: 20px;
+            padding: 15px;
             text-align: center;
             overflow-x: hidden;
             position: relative;
@@ -76,8 +76,9 @@
             text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5),
                          0 0 15px rgba(255, 255, 255, 0.8),
                          0 0 5px var(--gold);
-            margin: 40px 0;
-            font-size: 4em;
+            margin: 25px 0;
+            padding: 0 10px;
+            font-size: clamp(2rem, 5vw, 3.5rem);
             letter-spacing: 3px;
             animation: titleGlow 2s ease-in-out infinite;
         }
@@ -87,9 +88,9 @@
             backdrop-filter: blur(10px);
             border-radius: 30px;
             box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
-            padding: 40px;
-            margin: 30px auto;
-            max-width: 800px;
+            padding: 25px 20px;
+            margin: 20px auto;
+            max-width: min(90%, 600px);
             border: 3px solid rgba(255, 255, 255, 0.2);
             position: relative;
             overflow: hidden;
@@ -110,19 +111,21 @@
         }
 
         .price-item {
-            margin: 35px 0;
-            font-size: 1.8em;
+            margin: 25px 0;
+            padding: 20px;
+            font-size: clamp(1rem, 3vw, 1.4rem);
             transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-            padding: 25px;
             border-radius: 20px;
             background: rgba(255, 255, 255, 0.08);
             border: 1px solid rgba(255, 255, 255, 0.1);
             color: #ffffff;
             position: relative;
+            transform-style: preserve-3d;
+            perspective: 1000px;
         }
 
         .price-item:hover {
-            transform: scale(1.05) translateY(-5px);
+            transform: scale(1.02) translateY(-5px) rotateX(5deg);
             background: rgba(255, 255, 255, 0.15);
             box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
         }
@@ -145,7 +148,7 @@
             background-size: 200% 200%;
             animation: gradientShift 3s ease infinite;
             border: none;
-            padding: 15px 35px;
+            padding: 12px 25px;
             color: white;
             font-weight: 600;
             text-transform: uppercase;
@@ -158,6 +161,8 @@
             display: inline-flex;
             align-items: center;
             gap: 10px;
+            font-size: clamp(0.8rem, 2vw, 1rem);
+            margin-top: 15px;
         }
 
         .button-link i {
@@ -287,14 +292,32 @@
         .price-tag {
             display: inline-block;
             background: var(--premium-gold);
-            padding: 5px 15px;
-            border-radius: 20px;
+            padding: 8px 20px;
+            border-radius: 25px;
             color: #000;
             font-weight: bold;
             margin: 10px 0;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 3px 15px rgba(0, 0, 0, 0.2);
             transform: scale(1);
             transition: transform 0.3s ease;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .price-tag::after {
+            content: '';
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: linear-gradient(
+                transparent,
+                rgba(255, 255, 255, 0.4),
+                transparent
+            );
+            transform: rotate(45deg);
+            animation: shimmer 3s infinite;
         }
 
         .price-item:hover .price-tag {
@@ -325,16 +348,91 @@
             opacity: 0.5;
         }
 
-        @media (max-width: 600px) {
-            h1 {
-                font-size: 2em;
+        /* New premium badge */
+        .premium-badge {
+            position: absolute;
+            top: -10px;
+            right: -10px;
+            background: var(--premium-gold);
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1.2em;
+            box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+            transform: rotate(-15deg);
+            transition: transform 0.3s ease;
+        }
+
+        .price-item:hover .premium-badge {
+            transform: rotate(5deg) scale(1.1);
+        }
+
+        /* New glowing effect */
+        .glow-effect {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            background: radial-gradient(
+                circle at 50% 50%,
+                rgba(255, 255, 255, 0.1),
+                transparent 70%
+            );
+            opacity: 0;
+            transition: opacity 0.3s ease;
+        }
+
+        .price-item:hover .glow-effect {
+            opacity: 1;
+        }
+
+        /* New animations */
+        @keyframes shimmer {
+            0% { transform: translateX(-100%) rotate(45deg); }
+            100% { transform: translateX(100%) rotate(45deg); }
+        }
+
+        @media (max-width: 768px) {
+            .price-list {
+                padding: 15px;
             }
+
             .price-item {
-                font-size: 1.2em;
+                padding: 15px;
+                margin: 15px 0;
             }
+
             .button-link {
-                font-size: 0.9em;
+                padding: 10px 20px;
             }
+
+            .premium-badge {
+                width: 30px;
+                height: 30px;
+                font-size: 1em;
+            }
+        }
+
+        /* New feature: Custom scrollbar */
+        ::-webkit-scrollbar {
+            width: 8px;
+        }
+
+        ::-webkit-scrollbar-track {
+            background: rgba(255, 255, 255, 0.1);
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background: var(--primary-red);
+            border-radius: 4px;
+        }
+
+        ::-webkit-scrollbar-thumb:hover {
+            background: linear-gradient(45deg, var(--primary-red), #ff4d4d);
         }
     </style>
 </head>
@@ -343,10 +441,11 @@
     <div class="christmas-decoration"></div>
     <div class="lights"></div>
 
-    <h1>🎄 PREMIUM PRICES - Christmas Special 🎅</h1>
+    <h1>🎄 PREMIUM PRICES 🎅</h1>
     <div class="price-list">
         <div class="price-item">
-            <span class="premium-label">RECOMMENDED</span>
+            <div class="glow-effect"></div>
+            <div class="premium-badge">⭐</div>
             <img src="https://cdn-icons-png.flaticon.com/512/174/174861.png" alt="PayPal Icon" class="icon"> 
             <div class="price-tag">12€ PayPal</div>
             <div class="payment-note">(Family And Friends Only)</div>
