--- a/prices.html
+++ b/prices.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🎄 AK Admin Prices - Ultra Premium Edition 🎅</title>
+    <title>🎄 AK Admin Prices - Premium Christmas Edition 🎅</title>
     <link rel="icon" href="https://cdn.discordapp.com/attachments/1174404879545012275/1290061529680445561/IMG_0062.png?ex=66fd112c&is=66fbbfac&hm=01016e1014c200a554c70d5c1ffb5d3f23af9b5afc35f54132fc9da27caae8b6" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&family=Mountains+of+Christmas:wght@700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -14,8 +14,6 @@
             --gold: #ffd700;
             --premium-gold: linear-gradient(45deg, #ffd700, #ffec8b);
             --frost-white: rgba(255, 255, 255, 0.9);
-            --premium-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
-            --neon-glow: 0 0 10px rgba(255, 215, 0, 0.5);
         }
 
         body {
@@ -25,7 +23,7 @@
             animation: gradientAnimation 15s ease infinite;
             min-height: 100vh;
             margin: 0;
-            padding: 15px;
+            padding: 20px;
             text-align: center;
             overflow-x: hidden;
             position: relative;
@@ -78,9 +76,8 @@
             text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5),
                          0 0 15px rgba(255, 255, 255, 0.8),
                          0 0 5px var(--gold);
-            margin: 25px 0;
-            padding: 0 10px;
-            font-size: clamp(2rem, 5vw, 3.5rem);
+            margin: 20px 0;
+            font-size: 3em;
             letter-spacing: 3px;
             animation: titleGlow 2s ease-in-out infinite;
         }
@@ -90,9 +87,9 @@
             backdrop-filter: blur(10px);
             border-radius: 30px;
             box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
-            padding: 25px 20px;
-            margin: 20px auto;
-            max-width: min(90%, 600px);
+            padding: 20px;
+            margin: 15px auto;
+            max-width: 600px;
             border: 3px solid rgba(255, 255, 255, 0.2);
             position: relative;
             overflow: hidden;
@@ -113,60 +110,54 @@
         }
 
         .price-item {
-            margin: 35px 0;
-            padding: 30px;
-            border-radius: 25px;
+            margin: 20px 0;
+            font-size: 1.4em;
+            transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            padding: 15px;
+            border-radius: 20px;
             background: rgba(255, 255, 255, 0.08);
-            backdrop-filter: blur(15px);
             border: 1px solid rgba(255, 255, 255, 0.1);
+            color: #ffffff;
             position: relative;
-            overflow: hidden;
-            transform-style: preserve-3d;
-            perspective: 1000px;
-        }
-
-        .price-item.recommended {
-            background: rgba(255, 255, 255, 0.12);
-            border: 1px solid rgba(255, 215, 0, 0.3);
-            box-shadow: var(--premium-shadow),
-                        0 0 20px rgba(255, 215, 0, 0.2);
-            margin-top: 45px;
         }
 
         .price-item:hover {
-            transform: scale(1.02) translateY(-5px) rotateX(5deg);
+            transform: scale(1.05) translateY(-5px);
             background: rgba(255, 255, 255, 0.15);
             box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
         }
 
         .icon {
-            width: 45px;
-            height: 45px;
+            width: 35px;
+            height: 35px;
+            vertical-align: middle;
+            margin-right: 15px;
             filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
-            transition: all 0.3s ease;
-            transform: translateZ(30px);
+            transition: transform 0.3s ease;
         }
 
-        .recommended .icon {
-            filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2)) 
-                   drop-shadow(0 0 10px rgba(255, 215, 0, 0.3));
+        .price-item:hover .icon {
+            transform: scale(1.2) rotate(5deg);
         }
 
         .button-link {
             background: linear-gradient(45deg, #ff0000, #ff4d4d, #ff0000);
             background-size: 200% 200%;
             animation: gradientShift 3s ease infinite;
-            padding: 15px 30px;
-            border-radius: 30px;
+            border: none;
+            padding: 10px 25px;
+            color: white;
             font-weight: 600;
+            text-transform: uppercase;
             letter-spacing: 2px;
-            gap: 12px;
-            transform: translateZ(20px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-        }
-
-        .recommended .button-link {
-            box-shadow: var(--premium-shadow), var(--neon-glow);
+            border-radius: 30px;
+            box-shadow: 0 5px 15px rgba(255, 0, 0, 0.3);
+            transition: all 0.3s ease;
+            position: relative;
+            overflow: hidden;
+            display: inline-flex;
+            align-items: center;
+            gap: 10px;
         }
 
         .button-link i {
@@ -188,8 +179,8 @@
         }
 
         @keyframes shine {
-            0% { transform: translateX(-100%) rotate(45deg); }
-            100% { transform: translateX(100%) rotate(45deg); }
+            0% { transform: translateX(-100%); }
+            100% { transform: translateX(100%); }
         }
 
         @keyframes gradientAnimation {
@@ -296,32 +287,14 @@
         .price-tag {
             display: inline-block;
             background: var(--premium-gold);
-            padding: 8px 20px;
-            border-radius: 25px;
+            padding: 5px 15px;
+            border-radius: 20px;
             color: #000;
             font-weight: bold;
             margin: 10px 0;
-            box-shadow: 0 3px 15px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             transform: scale(1);
             transition: transform 0.3s ease;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .price-tag::after {
-            content: '';
-            position: absolute;
-            top: -50%;
-            left: -50%;
-            width: 200%;
-            height: 200%;
-            background: linear-gradient(
-                transparent,
-                rgba(255, 255, 255, 0.4),
-                transparent
-            );
-            transform: rotate(45deg);
-            animation: shimmer 3s infinite;
         }
 
         .price-item:hover .price-tag {
@@ -352,212 +325,16 @@
             opacity: 0.5;
         }
 
-        /* New premium badge */
-        .premium-badge {
-            position: absolute;
-            top: -10px;
-            right: -10px;
-            background: var(--premium-gold);
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 1.2em;
-            box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-            transform: rotate(-15deg);
-            transition: transform 0.3s ease;
-        }
-
-        .price-item:hover .premium-badge {
-            transform: rotate(5deg) scale(1.1);
-        }
-
-        /* New glowing effect */
-        .glow-effect {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            background: radial-gradient(
-                circle at 50% 50%,
-                rgba(255, 255, 255, 0.1),
-                transparent 70%
-            );
-            opacity: 0;
-            transition: opacity 0.3s ease;
-        }
-
-        .price-item:hover .glow-effect {
-            opacity: 1;
-        }
-
-        /* New animations */
-        @keyframes shimmer {
-            0% { transform: translateX(-100%) rotate(45deg); }
-            100% { transform: translateX(100%) rotate(45deg); }
-        }
-
-        /* Enhanced recommended label */
-        .recommended-label {
-            position: absolute;
-            top: -12px;
-            left: 50%;
-            transform: translateX(-50%);
-            background: var(--premium-gold);
-            padding: 5px 20px;
-            border-radius: 20px;
-            font-size: 0.8em;
-            color: #000;
-            font-weight: bold;
-            box-shadow: var(--premium-shadow);
-            z-index: 2;
-            letter-spacing: 1px;
-            border: 1px solid rgba(255, 255, 255, 0.3);
-            animation: float 3s ease-in-out infinite;
-        }
-
-        .recommended-label::after {
-            content: ' ⭐';
-            font-size: 1.1em;
-            vertical-align: middle;
-        }
-
-        /* Enhanced price item */
-        .price-item {
-            margin: 35px 0;
-            padding: 30px;
-            border-radius: 25px;
-            background: rgba(255, 255, 255, 0.08);
-            backdrop-filter: blur(15px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            position: relative;
-            overflow: hidden;
-            transform-style: preserve-3d;
-            perspective: 1000px;
-        }
-
-        .price-item.recommended {
-            background: rgba(255, 255, 255, 0.12);
-            border: 1px solid rgba(255, 215, 0, 0.3);
-            box-shadow: var(--premium-shadow),
-                        0 0 20px rgba(255, 215, 0, 0.2);
-            margin-top: 45px;
-        }
-
-        /* Enhanced price tag */
-        .price-tag {
-            background: var(--premium-gold);
-            padding: 10px 25px;
-            border-radius: 25px;
-            font-weight: bold;
-            position: relative;
-            overflow: hidden;
-            display: inline-block;
-            margin: 15px 0;
-            box-shadow: var(--premium-shadow);
-            transform: translateZ(20px);
-        }
-
-        .recommended .price-tag {
-            transform: scale(1.1) translateZ(30px);
-            box-shadow: var(--premium-shadow), var(--neon-glow);
-        }
-
-        /* Enhanced button */
-        .button-link {
-            background: linear-gradient(45deg, #ff0000, #ff4d4d, #ff0000);
-            background-size: 200% 200%;
-            animation: gradientShift 3s ease infinite;
-            padding: 15px 30px;
-            border-radius: 30px;
-            font-weight: 600;
-            letter-spacing: 2px;
-            gap: 12px;
-            transform: translateZ(20px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-        }
-
-        .recommended .button-link {
-            box-shadow: var(--premium-shadow), var(--neon-glow);
-        }
-
-        /* New hover effects */
-        .price-item::after {
-            content: '';
-            position: absolute;
-            inset: 0;
-            background: radial-gradient(circle at var(--x, 50%) var(--y, 50%),
-                rgba(255, 255, 255, 0.1) 0%,
-                transparent 50%);
-            opacity: 0;
-            transition: opacity 0.3s;
-        }
-
-        .price-item:hover::after {
-            opacity: 1;
-        }
-
-        /* New animations */
-        @keyframes float {
-            0%, 100% { transform: translateX(-50%) translateY(0); }
-            50% { transform: translateX(-50%) translateY(-5px); }
-        }
-
-        @keyframes shine {
-            0% { transform: translateX(-100%) rotate(45deg); }
-            100% { transform: translateX(100%) rotate(45deg); }
-        }
-
-        /* Payment note enhancement */
-        .payment-note {
-            font-size: 0.8em;
-            opacity: 0.8;
-            margin-top: 5px;
-            font-style: italic;
-            transform: translateZ(15px);
-        }
-
-        /* Add responsive adjustments */
-        @media (max-width: 768px) {
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 1.8em;
+            }
             .price-item {
-                padding: 20px;
-                margin: 25px 0;
+                font-size: 1em;
             }
-
-            .recommended-label {
-                font-size: 0.7em;
-                padding: 4px 15px;
-            }
-
-            .price-tag {
-                padding: 8px 20px;
-            }
-
             .button-link {
-                padding: 12px 25px;
-                font-size: 0.9em;
+                font-size: 0.8em;
             }
-        }
-
-        /* New feature: Custom scrollbar */
-        ::-webkit-scrollbar {
-            width: 8px;
-        }
-
-        ::-webkit-scrollbar-track {
-            background: rgba(255, 255, 255, 0.1);
-        }
-
-        ::-webkit-scrollbar-thumb {
-            background: var(--primary-red);
-            border-radius: 4px;
-        }
-
-        ::-webkit-scrollbar-thumb:hover {
-            background: linear-gradient(45deg, var(--primary-red), #ff4d4d);
         }
     </style>
 </head>
@@ -566,11 +343,10 @@
     <div class="christmas-decoration"></div>
     <div class="lights"></div>
 
-    <h1>🎄 PREMIUM PRICES 🎅</h1>
+    <h1>🎄 PREMIUM PRICES - Christmas Special 🎅</h1>
     <div class="price-list">
-        <div class="price-item recommended">
-            <div class="recommended-label">RECOMMENDED</div>
-            <div class="glow-effect"></div>
+        <div class="price-item">
+            <span class="premium-label">RECOMMENDED</span>
             <img src="https://cdn-icons-png.flaticon.com/512/174/174861.png" alt="PayPal Icon" class="icon"> 
             <div class="price-tag">12€ PayPal</div>
             <div class="payment-note">(Family And Friends Only)</div>
@@ -606,17 +382,6 @@
             }
         }
         createSnowflakes();
-
-        // Add interactive light effect
-        document.querySelectorAll('.price-item').forEach(item => {
-            item.addEventListener('mousemove', (e) => {
-                const rect = item.getBoundingClientRect();
-                const x = ((e.clientX - rect.left) / rect.width) * 100;
-                const y = ((e.clientY - rect.top) / rect.height) * 100;
-                item.style.setProperty('--x', `${x}%`);
-                item.style.setProperty('--y', `${y}%`);
-            });
-        });
     </script>
 </body>
 </html>
