--- a/prices.html
+++ b/prices.html
@@ -337,6 +337,13 @@
             }
         }
     </style>
+    <!-- Discord/Open Graph Meta Tags -->
+    <meta property="og:title" content="🎄 Premium Prices - Christmas Special 🎅">
+    <meta property="og:description" content="Check out our special Christmas pricing for Premium access! PayPal, Robux, and Nitro Boost options available.">
+    <meta property="og:image" content="https://cdn.discordapp.com/attachments/1174404879545012275/1307753555116949504/image.png?ex=673b73e8&is=673a2268&hm=76f418e9f2abbef4bdfca724aa9af61ba7c01c28dfbe3b4f7e26d4eaf5b2da5e&">
+    <meta property="og:url" content="[https://akadm1n.github.io/prices.html]">
+    <meta property="og:type" content="website">
+    <meta property="theme-color" content="#1a472a">
 </head>
 <body>
     <div class="frost-overlay"></div>
